--- a/pages/index/index.wxss
+++ b/pages/index/index.wxss
@@ -1,3 +1,20 @@
+.datetime {
+  font-size: 12px;
+  color: #666666;
+  margin: 2px 4px 4px 4px;
+  display: flex;
+}
+
+.date {
+  width: 50%;
+}
+
+.time {
+  width: 50%;
+  display: flex;
+  justify-content: flex-end;
+}
+
 .photo {
   width: 100%;
   min-height: 200px;
