--- a/pages/index/index.wxml
+++ b/pages/index/index.wxml
@@ -1,13 +1,23 @@
 <view class="datetime">
-<text class="date">{{dateText}}</text>
-<text class="time">{{timeText}}</text>
+  <text class="date">{{dateText}}</text>
+  <text class="time">{{timeText}}</text>
 </view>
-<view>
-<text bindtap='onTapLocation'>我在{{locationText}}</text>
+
+<view class="note">
+  <textarea placeholder='这一刻在吃啥...' placeholder-class='placeholder' focus='true'>
+  </textarea>
 </view>
+
+<view class="location">
+  <view class="map">
+    <map bindtap='onTapLocation'></map>
+  </view>
+  <text class="location-text">{{locationText}}</text>
+</view>
+
 <view class="photo" bindtap='onTapPhoto'>
   <image src="{{photoUrl}}"></image>
 </view>
 
-<button wx:if='{{hasUserInfo}}' bindtap='onTapSubmit'>{{submitButtonText}}</button>
+<button wx:if='{{hasUserInfoScope}}' bindtap='onTapSubmit' type="primary">{{submitButtonText}}</button>
 <button wx:else open-type='getUserInfo' bindgetuserinfo='onTapGetUserInfo'>{{submitButtonText}}</button>
