--- a/pages/index/index.wxss
+++ b/pages/index/index.wxss
@@ -15,6 +15,41 @@
   justify-content: flex-end;
 }
 
+.note {
+  margin: 16px;
+}
+
+.placeholder {
+  color: #999999;
+}
+
+.location {
+  display: flex;
+  width: 100%;
+  justify-content: center;
+  flex-wrap: wrap;
+}
+
+.map {
+  width: 90%;
+  height: 200px;
+  border-radius: 6px;
+  overflow: hidden;
+}
+
+.map > map {
+  width: 100%;
+  height: 100%;
+}
+
+.location-text {
+  display: flex;
+  width: 100%;
+  justify-content: center;
+  font-size: 14px;
+  color: #233333;
+}
+
 .photo {
   width: 100%;
   min-height: 200px;
