--- a/pages/index/index.wxss
+++ b/pages/index/index.wxss
@@ -1,22 +1,40 @@
-.datetime {
-  font-size: 12px;
-  color: #666666;
-  margin: 2px 4px 4px 4px;
-  display: flex;
+page {
+  height: 100%;
 }
 
-.date {
-  width: 50%;
+.container {
+  display: flex;
+  height: calc(100% - 32px);
+  flex-direction: column;
+  margin: 16px;
 }
 
-.time {
-  width: 50%;
-  display: flex;
-  justify-content: flex-end;
+.note-container {
+  width: 100%;
+  height: 15%;
+  margin-bottom: 6px;
+}
+
+.photo-container {
+  width: 100%;
+  height: 30%;
+  margin-bottom: 6px;
+}
+
+.location-container {
+  width: 100%;
+  height: calc(30% + 20px);
+  margin-bottom: 6px;
+}
+
+.commit-container {
+  width: 100%;
+  height: 10%;
+  margin-top: 16px;
 }
 
 .note {
-  margin: 16px;
+  font-size: 1em;
 }
 
 .placeholder {
@@ -25,14 +43,14 @@
 
 .location {
   display: flex;
+  flex-direction: column;
   width: 100%;
-  justify-content: center;
-  flex-wrap: wrap;
+  height: 100%;
 }
 
 .map {
-  width: 90%;
-  height: 200px;
+  width: 100%;
+  height: calc(100% - 20px);
   border-radius: 6px;
   overflow: hidden;
 }
@@ -45,12 +63,41 @@
 .location-text {
   display: flex;
   width: 100%;
+  height: 20px;
   justify-content: center;
   font-size: 14px;
   color: #233333;
 }
 
 .photo {
+  display: flex;
   width: 100%;
-  min-height: 200px;
+  height: 100%;
+}
+
+.user-photo {
+  width: 100%;
+  height: 100%;
+  border-radius: 6px;
+  overflow: hidden;
+}
+
+.user-photo-image {
+  width: 100%;
+  height: 100%;
+}
+
+.add-photo {
+  width: 100%;
+  height: 100%;
+  border-radius: 6px;
+  background: #dddddd;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.add-photo-image {
+  width: 48px;
+  height: 48px;
 }
