update location in map

--- a/pages/index/index.wxml
+++ b/pages/index/index.wxml
@@ -18,7 +18,11 @@
   <view class="location-container">
     <view class="location">
       <view class="map">
-        <map bindtap='onTapLocation'></map>
+        <map bindtap='onTapLocation'
+             latitude='{{locationLatitude}}'
+             longitude='{{locationLongitude}}'
+             scale='16'
+             markers='{{locationMarkers}}'></map>
       </view>
       <text class="location-text">{{locationText}}</text>
     </view>
