--- a/client/pages/stat/stat.wxml
+++ b/client/pages/stat/stat.wxml
@@ -1,2 +1,9 @@
-<!--client/pages/stat/stat.wxml-->
-<text>client/pages/stat/stat.wxml</text>
+<view class="container">
+  <view class="stars-container">
+    <view class="stars">
+      <view wx:for="{{stars}}" wx:key="{{index}}" class="star-container">
+        <view class="star {{item.cssClass}}"></view>
+      </view>
+    </view>
+  </view>
+</view>
