--- a/client/pages/stat/stat.wxss
+++ b/client/pages/stat/stat.wxss
@@ -1,37 +1,101 @@
 page {
   width: 100%;
   height: 100%;
-  --star-container-size: 40px;
+  --block-size: 46px;
 }
 
 .container {
   display: flex;
+  flex-wrap: wrap;
+  margin-left: 6px;
+  margin-right: 6px;
+  width: calc(100% - 12px);
+  height: 100%;
+  overflow: hidden;
+}
+
+.header-container {
+  display: flex;
+  width: 100%;
+  height: var(--block-size);
+  justify-content: flex-end;
+  background-color: white;
+}
+
+.days {
+  display: flex;
+  width: calc(var(--block-size) * 7);
+}
+
+.day {
+  /* border: 1px solid; */
+  display: flex;
+  justify-content: center;
+  align-items: flex-end;
+  width: var(--block-size);
+  font-size: 0.7em;
+}
+
+.content-container {
+  display: flex;
+  flex-wrap: wrap;
   width: 100%;
   height: 100%;
+  justify-content: flex-end;
+  overflow: scroll;
+}
+
+::-webkit-scrollbar { 
+    display: none; 
+}
+
+.months-container {
+  /* display: block; */
+  width: calc(var(--block-size) * 7);
+}
+
+.month-container {
+  display: block;
+  width: 100%;
+}
+
+.month-name-container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
+  height: var(--block-size);
+}
+
+.month-name {
+  font-size: 0.7em;
+  font-weight: bold;
 }
 
 .stars-container {
   display: flex;
-  width: 100%;
-  height: 100%;
-}
-
-.stars {
-  display: flex;
   flex-wrap: wrap;
-  width: 280px;
+  width: 100%;
+  /* height: var(--block-size); */
 }
 
 .star-container {
   display: flex;
-  width: var(--star-container-size);
-  height: var(--star-container-size);
-  /* height: 10px; */
+  justify-content: center;
+  align-items: center;
+  width: var(--block-size);
+  height: var(--block-size);
 }
 
 .star {
-  width: 90%;
-  height: 90%;
+  width: 95%;
+  height: 95%;
+  font-size: 0.7em;
+  color: white;
+}
+
+.star.empty {
+  visibility: hidden;
 }
 
 .star.didnt {
@@ -39,25 +103,26 @@ page {
 }
 
 .star.pretty-early {
-  background: #c6e48b;
+  background: #FACEC8;
 }
 
 .star.early {
-  background: #7bc96f;
+  background: #FFA398;
 }
 
 .star.normal {
-  background: #239a3b;
+  background: #EE7077;
 }
 
 .star.late {
-  background: #196127;
+  background: #DE2C2B;
 }
 
 .star.pretty-late {
-  background: #ebedf0;
+  background: #99130A;
 }
 
 .star.future-date {
   background: #fbfbfb;
+  color: black;
 }
