--- a/client/pages/stat/stat.wxss
+++ b/client/pages/stat/stat.wxss
@@ -1,7 +1,7 @@
 page {
   width: 100%;
   height: 100%;
-  --block-size: 46px;
+  --block-size: 42px;
 }
 
 .container {
@@ -90,8 +90,6 @@ page {
 .star {
   width: 95%;
   height: 95%;
-  font-size: 0.7em;
-  color: white;
 }
 
 .star.empty {
@@ -123,6 +121,5 @@ page {
 }
 
 .star.future-date {
-  background: #fbfbfb;
-  color: black;
+  background: #ebedf0;
 }
