--- a/client/pages/stat/stat.wxss
+++ b/client/pages/stat/stat.wxss
@@ -90,6 +90,14 @@ page {
 .star {
   width: 95%;
   height: 95%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.today-text {
+  color: white;
+  font-size: 1.1em;
 }
 
 .star.empty {
