--- a/client/pages/explore/explore.wxss
+++ b/client/pages/explore/explore.wxss
@@ -1,1 +1,14 @@
-/* client/pages/explore/explore.wxss */
+page {
+  width: 100%;
+  height: 100%;
+}
+
+.container {
+  width: 100%;
+  height: 100%;
+}
+
+map {
+  width: 100%;
+  height: 300px;
+}
