--- a/client/pages/stat/stat.wxss
+++ b/client/pages/stat/stat.wxss
@@ -42,7 +42,6 @@ page {
   width: 100%;
   height: 100%;
   justify-content: flex-end;
-  overflow: scroll;
 }
 
 ::-webkit-scrollbar { 
@@ -50,8 +49,9 @@ page {
 }
 
 .months-container {
-  /* display: block; */
+  display: block;
   width: calc(var(--block-size) * 7);
+  overflow-y: scroll;
 }
 
 .month-container {
@@ -106,6 +106,10 @@ page {
 
 .star.didnt {
   background: #ebedf0;
+}
+
+.star.didnt .today-text {
+  color: black;
 }
 
 .star.pretty-early {
