show photo and location marker

--- a/client/pages/stat/stat.wxml
+++ b/client/pages/stat/stat.wxml
@@ -16,6 +16,10 @@
           <view class="star-container" wx:for="{{item.stars}}" wx:key="{{index}}">
             <view class="star {{item.cssClass}}">
               <view class="today-text" wx:if="{{item.isToday}}">{{item.dateText}}</view>
+              <view class="markers-container" wx:if="{{item.hasPhoto || item.hasLocation}}">
+                <view class="photo-marker" wx:if="{{item.hasPhoto}}"></view>
+                <view class="location-marker" wx:if="{{item.hasLocation}}"></view>
+              </view>
             </view>
           </view>
         </view>
