--- a/client/pages/stat/stat.wxss
+++ b/client/pages/stat/stat.wxss
@@ -96,8 +96,30 @@ page {
 }
 
 .today-text {
+  position: absolute;
   color: white;
   font-size: 1.1em;
+}
+
+.markers-container {
+  border-top: 1px solid white;
+  width: 100%;
+  height: 2px;
+  display: flex;
+  align-self: flex-end;
+  justify-content: flex-end;
+}
+
+.photo-marker {
+  width: 100%;
+  height: 100%;
+  background-color: #4FB99F;
+}
+
+.location-marker {
+  width: 100%;
+  height: 100%;
+  background-color: #F2C975;
 }
 
 .star.empty {
@@ -114,6 +136,10 @@ page {
 
 .star.pretty-early {
   background: #FACEC8;
+}
+
+.star.pretty-early .today-text {
+  color: black;
 }
 
 .star.early {
