--- a/client/pages/stat/stat.wxss
+++ b/client/pages/stat/stat.wxss
@@ -88,21 +88,32 @@ page {
 }
 
 .star {
-  width: 95%;
-  height: 95%;
+  width: calc(100% - 2px);
+  height: calc(100% - 2px);
+  margin: 1px;
   display: flex;
   justify-content: center;
   align-items: center;
 }
 
-.today-text {
+.star-text {
+  width: calc(var(--block-size) * 0.5);
+  height: calc(var(--block-size) * 0.5);
+  display: flex;
+  justify-content: center;
+  align-items: center;
   position: absolute;
   color: white;
-  font-size: 1.1em;
+  font-size: 0.8em;
+}
+
+.is-today {
+  border-radius: 50%;
+  border: 1px white solid;
 }
 
 .markers-container {
-  border-top: 1px solid white;
+  /* border-top: 1px solid white; */
   width: 100%;
   height: 2px;
   display: flex;
@@ -130,16 +141,13 @@ page {
   background: #ebedf0;
 }
 
-.star.didnt .today-text {
-  color: black;
-}
-
 .star.pretty-early {
   background: #ebfbee;
 }
 
+.star.didnt .today-text,
 .star.pretty-early .today-text {
-  color: black;
+  color: #ced4da;
 }
 
 .star.early {
