--- a/client/pages/explore/explore.wxss
+++ b/client/pages/explore/explore.wxss
@@ -4,11 +4,35 @@ page {
 }
 
 .container {
-  width: 100%;
+  width: calc(100% - 12px);
   height: 100%;
+  margin-left: 6px;
+  margin-right: 6px;
 }
 
-map {
+.rank-container {
+  height: 60px;
+}
+
+.city-heat-container {
   width: 100%;
   height: 300px;
+}
+
+.map-container {
+  position: relative;
+  width: 100%;
+  height: 90%;
+}
+
+#city-heat-map {
+  width: 100%;
+  height: 100%;
+  position: absolute;
+}
+
+#city-heat-canvas {
+  width: 100%;
+  height: 100%;
+  position: absolute;
 }
