--- a/client/pages/stat/stat.wxss
+++ b/client/pages/stat/stat.wxss
@@ -121,6 +121,12 @@ page {
   justify-content: flex-end;
 }
 
+.note-marker {
+  width: 100%;
+  height: 100%;
+  background-color: #9775fa;
+}
+
 .photo-marker {
   width: 100%;
   height: 100%;
